@@ -1,3 +1,8 @@
+2008-05-01  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ConsiderConvertingFieldToNullableRuleTest.cs: New. Test cases 
+	for ConsiderConvertingFieldToNullableRule [Cedric Vivier].
+
 2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ConsiderConvertingMethodToPropertyTest.cs: Add test cases for 
